# remote-research

./: .dockerignore  .gitignore  Dockerfile.chatbot  Dockerfile.research-server  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  mcp_chatbot.py  pyproject.toml  requirements.txt  research_server.py  server_config.docker.json  server_config.json
src/: mcp_chatbot.py  research_server.py
